--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
   },
   "dependencies": {
     "cross-env": "5.1.4",
+    "eslint-config-standard": "^11.0.0",
+    "git": "^0.1.5",
+    "mobx": "^4.1.1",
+    "mobx-react": "^5.0.0",
+    "pattern-library": "https://github.com/openstax/pattern-library",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-hot-loader": "4.0.1",
