--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     }
   },
   "dependencies": {
+    "big.js": "^5.0.3",
     "cross-env": "5.1.4",
     "eslint-config-standard": "^11.0.0",
     "git": "^0.1.5",
@@ -43,7 +44,7 @@
     "pattern-library": "https://github.com/openstax/pattern-library",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
-    "react-dom": "16.3.1",
+    "react-dom": "^16.3.1",
     "react-hot-loader": "4.0.1",
     "react-router-dom": "4.2.2"
   },
